Create a new setting file done.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = Setting Maker
-version = 0.0
+name = Sema
+version = 0.1
 author = Moein Mavini
 author_email = moinmavini@gmail.com
 description = Define easy to use and user friendly settings for your programs
@@ -8,5 +8,5 @@ description = Define easy to use and user friendly settings for your programs
 
 [options.entry_points]
 console_scripts =
-    sema = Command_Line.Menu:start
+    sema = command_line.menu:start
 
