--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = Sema
+name = sema
 version = 0.1
 author = Moein Mavini
 author_email = moinmavini@gmail.com
 description = Define easy to use and user friendly settings for your programs
-
+url = https://github.com/MoeinMavini/sema
 
 [options.entry_points]
 console_scripts =
