Re-structered the project.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,7 @@ version = 0.1
 author = Moein Mavini
 author_email = moinmavini@gmail.com
 description = Define easy to use and user friendly settings for your programs
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/MoeinMavini/sema
-
-[options.entry_points]
-console_scripts =
-    sema = command_line.menu:start
 
